<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="rate_al_salah">Rate now</string>
    <string name="rate_remind_later">Remind later</string>
    <string name="rate_discard">No, thanks</string>
    <string name="rate_message">Assalamualaikum, If you enjoy using Al-Salah, please take a moment to rate this app. It won\'t take more than a minute. Thank you for your support!</string>
    <string name="title">Al-Salah</string>
    <string name="sub_title">Pray before you are prayed upon!!!</string>
    <string name="app_name">Al-Salah 2.0</string>
    <string name="app_package_name">com.aaha.al_salah</string>
    <string name="register_user">Create new account</string>
    <string name="manage_users">Manage Users</string>
    <string name="action_settings">Settings</string>
    <string name="daily_salah_settings">Daily Salah Settings</string>
    <string name="tab_settings">Tab Settings</string>
    <string name="tasbeeh_settings">Tasbeeh Settings</string>
    <string name="owner">Abdul Hasib</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login…</string>
    <string name="register">Register</string>
    <string name="dob">Select date of birth</string>
    <string name="pub_age">Puberty Age (12)</string>
    <string name="submit">Submit</string>
    <string name="select">Select</string>
    <string name="add_prayers">Ada</string>
    <string name="prayer_home">Salah</string>
    <string name="pub_age_prompt">Choose Puberty Age</string>
    <string name="tasbeeh_prompt">Choose Tasbeeh Count</string>
    <string name="loading_text">loading…</string>
    <string name="today">Today</string>
    <string name="overall">Overall</string>
    <string name="zikr">Zikr</string>
    <string name="zero">0</string>
    <string name="slash"> / </string>
    <string name="day">Day</string>
    <string name="fajr">Fajr</string>
    <string name="zohar">Zohar</string>
    <string name="asr">Asr</string>
    <string name="magrib">Magrib</string>
    <string name="isha">Isha</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="date">Date</string>
    <string name="ada">Ada</string>
    <string name="qadha">Qadha</string>
    <string name="qasr">Qasr</string>
    <string name="gunah">Gunah</string>
    <string name="add">Add</string>
    <string name="add_ada">Add Ada</string>
    <string name="add_qadha">Add Qadha</string>
    <string name="siyam">Siyam</string>
    <string name="taraweeh">Taraweeh</string>
    <string name="quran">Quran</string>
    <string name="recite_quran">Recite Quran</string>
    <string name="quran_juz">How many juz?</string>
    <string name="add_additional_salah">Add Additional Salah</string>
    <string name="moveup">Move Up</string>
    <string name="movedown">Move Down</string>
    <string name="edit">Edit</string>
    <string name="mark_qasr">Mark Qasr</string>
    <string name="mark_menstruation">Mark Menstruation</string>
    <string name="reset_count">Reset Count</string>
    <string name="reset_all">Reset</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="import_data">Import</string>
    <string name="export_data">Export</string>
    <string name="export_note">Note: exported backup file will be saved directly under SD card</string>
    <string name="import_note">Note: specify only the file name. file should exist directly under sdcard.</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_update_profile">Update Profile</string>
    <string name="menu_tasbeeh">Tasbeeh</string>
    <string name="pref_profile_gender">Set Gender</string>
    <string name="pref_profile_gender_summary">Set your gender</string>
    <string name="pref_highlight_friday">Highlight Friday</string>
    <string name="pref_highlight_friday_summary">Mark Friday in daily salah list</string>
    <string name="pref_hide_additional_tab">Hide Additional Tab</string>
    <string name="pref_hide_additional_tab_summary">Show/ Hide additional Salah tab</string>
    <string name="pref_hide_qadha_tab">Hide Qadha Tab</string>
    <string name="pref_hide_qadha_tab_summary">Show/ Hide Qadha Salah tab</string>
    <string name="pref_hide_ramdhan_tab">Hide Ramdhan Tab</string>
    <string name="pref_hide_ramdhan_tab_summary">Show/ Hide Ramdhan tab</string>
    <string name="pref_auto_direct_tasbeeh">Zikr of Allah</string>
    <string name="pref_auto_direct_tasbeeh_summary">Open Tasbeeh on adding each Salah</string>
    <string name="pref_daily_salah_limit">Number of Daily Salah</string>
    <string name="pref_daily_salah_limit_summary">Set daily salah display list size</string>
    <string name="pref_hide_perfect_days">Hide perfect day</string>
    <string name="pref_hide_perfect_days_summary">Hide the day(s) you prayed all five prayers</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_password">Set password</string>
    <string name="pref_user_password_summary">Set your password</string>
    <string name="pref_user_dob">Set date of birth</string>
    <string name="pref_user_dob_summary">Set your date of birth</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Profile Settings</string>

</resources>