<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="6" >
    <TextView
        android:id="@+id/item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:text="@string/day"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/item_fajr"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:text="@string/fajr"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/item_zohar"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:text="@string/zohar"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/item_asr"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:text="@string/asr"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/item_magrib"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:text="@string/magrib"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/item_isha"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:text="@string/isha"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</TableRow>