<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@layout/background_activity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <EditText
            android:id="@+id/usernameText"
            style="@style/EditTextAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/username"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/passwordText"
            style="@style/EditTextAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/usernameText"
            android:layout_below="@+id/usernameText"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/selectDateButton"
            style="@style/ButtonAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordText"
            android:layout_alignRight="@+id/passwordText"
            android:layout_below="@+id/passwordText"
            android:layout_marginTop="10dp"
            android:text="@string/dob" />

        <Spinner
            android:id="@+id/pubAgeSpinner"
            style="@style/ButtonAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/selectDateButton"
            android:layout_alignRight="@+id/selectDateButton"
            android:layout_below="@+id/selectDateButton"
            android:layout_marginTop="10dp"
            android:entries="@array/pub_age_values"
            android:prompt="@string/pub_age_prompt"
            tools:listitem="@android:layout/simple_spinner_item" />

        <Button
            android:id="@+id/createUser"
            style="@style/ButtonAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pubAgeSpinner"
            android:layout_alignRight="@+id/pubAgeSpinner"
            android:layout_below="@+id/pubAgeSpinner"
            android:layout_marginTop="30dp"
            android:text="@string/submit" />
    </RelativeLayout>

</ScrollView>