<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recentPrayersLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/background_activity"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <ListView
        android:id="@+id/recentPrayers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:fastScrollEnabled="true"
        android:orientation="vertical" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="50dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <TextView
            android:id="@+id/adaMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/ada"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/qadhaMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/qadha"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/qasrMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/qasr"
            android:textColor="@color/magenta" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/addDailySalah"
            style="@style/ButtonAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/add" />
    </RelativeLayout>

</LinearLayout>